# bloop

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  bench.sh  config.toml  docker-compose.yml  test_proxy.sh
.github/workflows/: ci.yml  deploy-site.yml  e2e.yml
docs/: openapi.yml  passkey-setup.md
migrations/: 001_initial.sql  002_webauthn.sql  003_multi_user.sql  004_projects.sql  005_timeseries.sql  006_alert_channels.sql  007_sourcemaps.sql  008_index_optimization.sql  009_bearer_tokens.sql  010_hash_sessions.sql  011_retention_settings.sql  012_llm_tracing.sql  013_llm_alert_rules.sql  014_llm_search.sql  015_llm_scores.sql  016_llm_prompt_fields.sql  017_pricing_overrides.sql  018_llm_sessions.sql  019_llm_feedback.sql  020_llm_budgets.sql  021_llm_rag_index.sql  022_prompt_experiments.sql
scripts/: check.sh  seed.sh
site/: docs-api.html  docs-deploy.html  docs-guides.html  docs-sdks.html  docs.html  index.html
site/css/: style.css
site/js/: docs.js
src/: auth_login.html  config.rs  dashboard.html  error.rs  fingerprint.rs  lib.rs  main.rs  project.rs  sourcemap.rs  types.rs
src/alert/: dispatch.rs  mod.rs  rules.rs
src/analytics/: cache.rs  conn.rs  handler.rs  mod.rs  queries.rs  types.rs
src/auth/: bearer.rs  mod.rs  session.rs  state.rs  token_routes.rs  webauthn.rs
src/ingest/: auth.rs  handler.rs
src/llm_tracing/: alerts.rs  budget.rs  cache.rs  conn.rs  experiment.rs  export.rs  feedback.rs  handler.rs  mod.rs  pricing.rs  pricing_handler.rs  proxy.rs  query.rs  query_handler.rs  scores.rs  settings.rs  types.rs  worker.rs  writer.rs
src/pipeline/: aggregator.rs  mod.rs  worker.rs
src/query/: handler.rs
src/storage/: migrations.rs  mod.rs  retention.rs  retention_api.rs  sqlite.rs  writer.rs
tests/: integration_test.rs  llm_proxy_test.rs  llm_tracing_test.rs  security_test.rs
tests/e2e/: global-setup.ts  global-teardown.ts  llm-dashboard.spec.ts  playwright.config.ts  seed.ts
tests/sdk-integration/: docker-compose.yml  run.sh
tests/sdk-integration/python/: Dockerfile  test_tracing.py
tests/sdk-integration/ruby/: Dockerfile  test_tracing.rb
tests/sdk-integration/rust/: Cargo.toml  Dockerfile
tests/sdk-integration/rust/src/: main.rs
tests/sdk-integration/typescript/: Dockerfile  test.mjs
