[package]
name = "bloop"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Self-hosted error observability for mobile apps and APIs"
repository = "https://github.com/jaikoo/bloop"
homepage = "https://bloop.dthink.ai"
keywords = ["error-tracking", "observability", "sqlite", "self-hosted"]
categories = ["web-programming", "development-tools"]

[features]
default = []
analytics = ["duckdb"]
llm-tracing = ["duckdb"]

[dependencies]
# Analytics (optional)
duckdb = { version = "1.4", optional = true, features = ["bundled"] }

# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
tower_governor = "0.8"

# SQLite
rusqlite = { version = "0.37", features = ["bundled"] }
deadpool-sqlite = "0.12"

# In-memory cache
moka = { version = "0.12", features = ["future", "sync"] }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (webhooks)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Config
config = "0.14"

# CLI
clap = { version = "4", features = ["derive"] }

# Auth
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
axum-extra = { version = "0.10", features = ["cookie"] }
rand = "0.8"
base64 = "0.22"
url = "2"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Misc
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
sourcemap = "9"
flate2 = "1"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
